--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-# torch is installed separately in the Dockerfile for reliability
-sentence-transformers==2.2.2
-scikit-learn==1.2.2
-numpy==1.24.3
+sentence-transformers==5.0.0
+scikit-learn==1.3.2
+numpy==1.26.0
+huggingface-hub>=0.20.0
+PyMuPDF==1.24.1
